--- a/references.bib
+++ b/references.bib
@@ -294,3 +294,20 @@ author = {Thiago Christiano Silva and Liang Zhao},
   url = {http://dblp.uni-trier.de/db/conf/interspeech/eurospeech1997.html#MartinDKOP97},
   year = 1997
 }
+
+@book{Naur1974,
+  author = {Naur, Peter},
+  title = {Concise Survey of Computer Methods},
+  year = {1974},
+  publisher = {Studentlitteratur},
+  address = {Lund, Sweden},
+  isbn = {91-44-07881-1},
+  url = {http://www.naur.com/Conc.Surv.html}}
+
+@inproceedings{Cleveland2001,
+  author = {Cleveland, William S.},
+  title = {Data Science: An Action Plan for Expanding the Technical Areas of the Field of Statistics},
+  booktitle = {ISI Review},
+  volume = {69},
+  pages = {21-26},
+  year = {2001}}
