--- a/about.tex
+++ b/about.tex
@@ -62,7 +62,7 @@ So\dots I expect my approach on the subject provide:
   \item awareness of all steps in a data science project;
   \item deeper focus (than most books) on data handling, describing the semantics of dataset
     operators instead of restraining ourselves with a specific tool;
-  \item deeper focus (than most books) on why machine learning works, increasing awareness of its pitfalls and
+  \item deeper focus (than most books) on \emph{why} machine learning works, increasing awareness of its pitfalls and
     limitations;
   \item deeper focus (than most books) on correct evaluation and validation
     (pre-deployment) of machine learning models.
