--- a/history.tex
+++ b/history.tex
@@ -27,6 +27,13 @@ enough context to support the development of the material in the following chapt
 sometimes avoiding directions that are not relevant in the inductive learning context.
 
 \begin{mainbox}{Chapter remarks}
+
+  \boxsubtitle{Contents}
+
+  \startcontents[chapters]
+  \printcontents[chapters]{}{1}{}
+  \vspace{1em}
+
   \boxsubtitle{Context}
 
   \begin{itemize}
@@ -125,7 +132,7 @@ is delegated to other fields and sciences.''
     \node[anchor=north,above] at (0,2) {data science};
   \end{tikzpicture}
   \tcblower
-    For him, data science studies the techniques to deal
+    For Naur, data science studies the techniques to deal
     with data, but he delegates the meaning of data to other fields.
 \end{figurebox}
 
@@ -181,7 +188,7 @@ performance computing for deep data analysis.
     \node[anchor=north,above] at (0,2) {data science};
   \end{tikzpicture}
   \tcblower
-    For him, data science is the ``modern'' statistics,
+    For Cleveland, data science is the ``modern'' statistics,
     where it is enlarged by computer science and domain expertise.
 \end{figurebox}
 
@@ -398,7 +405,8 @@ history addresses this issue.
 
 \subsubsection{Formal age}
 
-In 1970, Edgar Frank Codd (1923 -- 2003) published a paper entitled ``A Relational Model
+In 1970, Edgar Frank Codd (1923 -- 2003), a British computer scientist,
+published a paper entitled ``A Relational Model
 of Data for Large Shared Data Banks''\footfullcite{Codd1970}.  In this paper, he introduced
 the concept of a relational model for database management.
 
@@ -437,7 +445,8 @@ data warehouse.
 The concept of data warehousing dates back to the late 1980s when IBM researchers Barry
 Devlin and Paul Murphy developed the ``business data warehouse.''
 
-Two major figures in the history of ETL are Ralph Kimball and Bill Inmon.  Although they
+Two major figures in the history of ETL are Ralph Kimball (born 1944) and Bill Inmon (born
+1945), both American computer scientists.  Although they
 differ in their approaches, they both agree that data warehousing is the foundation for
 business intelligence (BI) and analytics, and that data warehouses should be designed to
 be easy to understand and fast to query for business users.
