--- a/preliminaries.tex
+++ b/preliminaries.tex
@@ -10,6 +10,36 @@ mathematics, statistics, computer science, optimization theory, and information 
 This chapter provides a brief overview of the computational, mathematical and statistical
 concepts that are used in the rest of the book.
 
+\begin{mainbox}{Chapter remarks}
+
+  \boxsubtitle{Contents}
+
+  \startcontents[chapters]
+  \printcontents[chapters]{}{1}{}
+  \vspace{1em}
+
+  \boxsubtitle{Context}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Objectives}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+
+  \boxsubtitle{Takeways}
+
+  \begin{itemize}
+    \item \dots
+  \end{itemize}
+\end{mainbox}
+
+{}
+\clearpage
+
 \section{Algorithms and data structures}
 
 Algorithms are step-by-step procedures for solving a problem.  They are used to
